# Fastest_Image_Pattern_Matching_python

./: .gitignore  CMakeLists.txt  README.md  README_Python.md  build.sh  install_dependencies.sh  pyproject.toml  requirements.txt  setup.py
MatchTool/: test_main.cpp  x86_ubuntu_linux.cpp
MatchTool_python/: __init__.py  example.py  wrapper.py
MatchTool_python/src/: core_matcher.cpp  simd_optimization.cpp  simd_optimization.h
